added a location search section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,27 @@
 </head>
 <body>
    <header class="header">
+       <div class="h1-container translate-middle bg-dark justify-content-center">
        <h1 class="h1 text-light">Weather Dashboard</h1>
+       </div>
    </header>
     
+   <main class="main">
+       <div class="container">
+           <div class=" row-page-content">
+               <!-- column 1 -->
+               <div class="col-sm-4 bg-light p-0">
+                   <!-- search section -->
+                   <div class="form-container">
+                       <form action="search-form">
+                           <div class="row s-0">
+                               <label for="search-input" class="search-label p-0 text-dark">Enter A Location:</label>
+                           </div>
+                       </form>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </main>
 </body>
 </html>
