--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"> 
     <title>Weather Dashboard</title>
 </head>
 <body>
@@ -17,13 +18,14 @@
        <div class="container">
            <div class=" row-page-content">
                <!-- column 1 -->
-               <div class="col-sm-4 bg-light p-0">
+               <div class="col-sm-4 bg-light m-0">
                    <!-- search section -->
                    <div class="form-container">
                        <form action="search-form">
                            <div class="row s-0">
-                               <label for="search-input" class="search-label p-0 text-dark">Enter A Location:</label>
+                               <label for="search-input" class="search-label m-0 text-dark">Enter A Location:</label>
                            </div>
+                           <div class="row m-0"></div>
                        </form>
                    </div>
                </div>
