added button and search glyphicon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
                            <div class="row s-0">
                                <label for="search-input" class="search-label m-0 text-dark">Enter A Location:</label>
                            </div>
-                           <div class="row m-0"></div>
+                           <div class="row m-0">
+                               <div class="col-sm-7 p-0 my-auto">
+                                   <input type="text" id="search-input" name="search-input" class="search-input rounded">
+                               </div>
+                               <div class="col-sm-4 p-0">
+                                   <button type="submit" class="btn bg-light rounded search-button">
+                                       <span class="glyphicon glyphicon-search"></span>
+                                   </button>
+                               </div>
+                           </div>
                        </form>
                    </div>
                </div>
