--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"> 
-    <link rel="stylesheet" href="Assets/asset.css"
-    <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="Assets/asset.css">
+   
 </head>
 <body>
    <header class="header">
