--- a/index.html
+++ b/index.html
@@ -3,44 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"> 
-    <link rel="stylesheet" href="Assets/asset.css">
-   
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Assets/css/style.css">
+
+    <title>Weather Dashboard</title>
 </head>
 <body>
-   <header class="header">
-       <div class="h1-container translate-middle bg-dark justify-content-center">
-       <h1 class="h1 text-light">Weather Dashboard</h1>
-       </div>
-   </header>
+    <header class="container-fluid text-center text-white p-2">
+        <h1> Weather Dashboard </h1>
+    </header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3 bg-light">
+                    <p class="search-ehader my-1">Search By City</p>
+                    <div class="input-group mb-3">
+                        <input id="city-input" type="text" class="form-control">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="button" id="search-button">Search</button>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary mb-3" type="button" id="clear">Clear history</button>
+                    <form id="history"></form>
+                </div>
+                <div class="col-lg-9">
+                    <div class="card-body">
+                        <div class=""></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     
-   <main class="main">
-       <div class="container">
-           <div class=" row-page-content">
-               <!-- column 1 -->
-               <div class="col-sm-4 bg-light m-0">
-                   <!-- search section -->
-                   <div class="form-container">
-                       <form action="search-form">
-                           <div class="row s-0">
-                               <label for="search-input" class="search-label m-0 text-dark">Enter A Location:</label>
-                           </div>
-                           <div class="row m-0">
-                               <div class="col-sm-7 p-0 my-auto">
-                                   <input type="text" id="search-input" name="search-input" class="search-input rounded">
-                               </div>
-                               <div class="col-sm-4 p-0">
-                                   <button type="submit" class="btn bg-light rounded search-button">
-                                       <span class="glyphicon glyphicon-search"></span>
-                                   </button>
-                               </div>
-                           </div>
-                       </form>
-                   </div>
-               </div>
-           </div>
-       </div>
-   </main>
 </body>
 </html>
