--- a/index.html
+++ b/index.html
@@ -1,66 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="./Assets/css/style.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./Assets/css/style.css" />
 
     <title>Weather Dashboard</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="container-fluid text-center text-white p-2">
-        <h1> Weather Dashboard </h1>
+      <h1>Weather Dashboard</h1>
     </header>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-3 bg-light">
-                    <p class="search-ehader my-1">Search By City</p>
-                    <div class="input-group mb-3">
-                        <input id="enter-city" type="text" class="form-control">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary" type="button" id="search">Search</button>
-                        </div>
-                    </div>
-                    <button class="btn btn-primary mb-3" type="button" id="clear">Clear history</button>
-                    <form id="history"></form>
-                </div>
-                <div class="col-lg-9">
-                    <div class="card-body">
-                        <div class="col-lg-11 card m-3 d-none" id="current-weather">
-                            <div class="card-body">
-                                <h2 class="city-name align-middle" id="city-name"></h2>
-                                    <img id="current-pic" alt="">
-                                    <h4 id="current-temp"></h4>
-                                    <h4 id="wind"></h4>
-                                    <h4 id="humidity"></h4>
-                                    <h4 id="UV"></h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <h2>5 Day Forecast</h2>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="forecast col-md-2 bg-primary text-white m-2 rounded"></div>
-                        <div class="forecast col-md-2 bg-primary text-white m-2 rounded"></div>
-                        <div class="forecast col-md-2 bg-primary text-white m-2 rounded"></div>
-                        <div class="forecast col-md-2 bg-primary text-white m-2 rounded"></div>
-                        <div class="forecast col-md-2 bg-primary text-white m-2 rounded"></div>
-                    </div>
-                </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-3 bg-light">
+          <p class="search-ehader my-1">Search By City</p>
+          <div class="input-group mb-3">
+            <input id="enter-city" type="text" class="form-control" />
+            <div class="input-group-append">
+              <button class="btn btn-primary" type="button" id="search">
+                Search
+              </button>
             </div>
+          </div>
+          <button class="btn btn-primary mb-3" type="button" id="clear">
+            Clear history
+          </button>
+          <form id="history"></form>
         </div>
+        <div class="col-lg-9">
+          <div class="card-body">
+            <div class="col-lg-11 card m-3 d-none" id="current-weather">
+              <div class="card-body">
+                <h2 class="city-name align-middle" id="city-name"></h2>
+                <img id="current-pic" alt="" />
+                <h4 id="current-temp"></h4>
+                <h4 id="wind"></h4>
+                <h4 id="humidity"></h4>
+                <h4 id="UV"></h4>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <h2>5 Day Forecast</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div
+              class="forecast col-md-2 bg-primary text-white m-2 rounded"
+            ></div>
+            <div
+              class="forecast col-md-2 bg-primary text-white m-2 rounded"
+            ></div>
+            <div
+              class="forecast col-md-2 bg-primary text-white m-2 rounded"
+            ></div>
+            <div
+              class="forecast col-md-2 bg-primary text-white m-2 rounded"
+            ></div>
+            <div
+              class="forecast col-md-2 bg-primary text-white m-2 rounded"
+            ></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="./Assets/css/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
     
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   
+    <script src="./Assets/css/script.js"></script>
+  </body>
 </html>
