--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
     <link rel="stylesheet" href="./Assets/css/style.css" />
 
     <title>Weather Dashboard</title>
@@ -23,11 +24,11 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-3 bg-light">
-          <p class="search-ehader my-1">Search By City</p>
+          <h5 class="mt-1">Search By City</h5>
           <div class="input-group mb-3">
-            <input id="enter-city" type="text" class="form-control" />
+            <input id="enter-city" type="text" class="form-control" placeholder="Enter a city" />
             <div class="input-group-append">
-              <button class="btn btn-primary" type="button" id="search">
+              <button class="btn btn-primary" type="button" id="search-button">
                 Search
               </button>
             </div>
