created JS folder in assets to clean things up submitting for final

--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    
-    <script src="./Assets/css/script.js"></script>
+    <script src="./Assets/javascript/script.js"></script>
   </body>
 </html>
